@@ -78,3 +78,4 @@ gpg: cannot open `/dev/tty': Device not configured
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 
+> added annex.gnupg-decrypt-options; [[done]] --[[Joey]]
